--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^5.2.0",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.2",
